--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "nextjs-boilerplate",
-  "version": "0.1.0",
+  "version": "0.2.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
@@ -9,41 +9,32 @@
     "deploy": "next start -p 3000",
     "preview": "next start -p 3000",
     "lint": "eslint ./ --ext .ts,.tsx",
+    "lint-fix": "eslint --fix ./ --ext .ts,.tsx",
     "type-check": "tsc --noEmit --emitDeclarationOnly false"
   },
   "dependencies": {
-    "@emotion/react": "11.10.4",
-    "@emotion/styled": "11.10.4",
-    "@fullerstack/nax-ipware": "0.10.0",
-    "chaya-ui": "1.0.0-beta.12",
-    "classnames": "^2.3.1",
+    "chaya-ui": "1.0.0-beta.17",
+    "clsx": "^1.2.1",
     "color": "^4.2.3",
     "date-fns": "2.29.2",
-    "framer-motion": "^5.5.5",
     "graphql-hooks": "^6.2.1",
     "isomorphic-fetch": "3.0.0",
     "nanoid": "3.3.4",
     "next": "13.0.3",
     "nprogress": "0.2.0",
-    "querystring": "^0.2.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hot-toast": "^2.4.0",
-    "react-responsive": "^9.0.2",
-    "react-waypoint": "10.3.0",
-    "store2": "^2.14.2",
+    "sass": "^1.60.0",
     "tailwindcss": "^3.2.7"
   },
   "devDependencies": {
     "@svgr/webpack": "^6.5.1",
-    "@types/body-scroll-lock": "^3.1.0",
     "@types/isomorphic-fetch": "^0.0.36",
-    "@types/lodash": "^4.14.191",
     "@types/node": "18.11.18",
+    "@types/nprogress": "^0.2.0",
     "@types/papaparse": "^5.3.7",
     "@types/react": "18.0.27",
-    "@types/react-katex": "^3.0.0",
-    "@types/react-syntax-highlighter": "^15.5.6",
     "@typescript-eslint/eslint-plugin": "^5.51.0",
     "@typescript-eslint/parser": "^5.51.0",
     "autoprefixer": "^10.4.0",
