--- a/sample.env
+++ b/sample.env
@@ -1,2 +1,2 @@
-NEXT_PUBLIC_GRAPHQL_SERVER_ENDPOINT=http://127.0.0.1:8000/api/graphql/
-PREFETCH_SERVER_ENDPOINT=http://127.0.0.1:8000/api/graphql/
+NEXT_PUBLIC_GRAPHQL_SERVER_ENDPOINT=http://localhost/api/graphql/
+PREFETCH_SERVER_ENDPOINT=http://localhost/api/graphql/
