--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "type-check": "tsc --noEmit --emitDeclarationOnly false"
   },
   "dependencies": {
+    "@svgr/webpack": "^7.0.0",
     "chaya-ui": "1.0.0-beta.17",
     "clsx": "^1.2.1",
     "color": "^4.2.3",
